fixing disclosure overlap

--- a/packages/site/src/layout/NavMenu.module.css
+++ b/packages/site/src/layout/NavMenu.module.css
@@ -16,6 +16,7 @@
   min-height: 40px;
   display: flex;
   align-items: center;
+  margin: var(--space-smaller) 0;
 }
 
 .navMenuLink {
